--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,15 @@
-# we need super user level access to execute this build
+# we need super user level access to execute this build, because we need docker
 sudo: required 
 services: 
-  - docker
+  - docker # travis will install docker because of this line
 
 # contains a series of commands that gets executed before our test runs
 before_install: 
   - docker build -t protickr/docker-react -f Dockerfile.dev .
 
+# list the commands as to what to do with the build and how to run this build
 script: 
   - docker run -e CI=true protickr/docker-react npm run test
-
-# list the commands as to what to do with the build and how to run this build
 # travis will watch for outputs of each of this commands and if any of the output returns non 0 value then 
 # it is considered as error and our build failed
   # - docker run protickr/docker-react npm run test -- --coverage
-  
